--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,12 @@
 ---
 layout: default
 ---
-{% include page.html %}
+
+<section>
+	<article class="post">
+		<h2 class="entry-title">
+			<a href="{{ page.url }}" class="no-link" title="Permalink to {{ page.title }}" rel="bookmark">{{ page.title }}</a>
+		</h2>
+		{{ content }}
+	</article>
+</section>
