--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,23 @@ theme:
 ---
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang='en-US'>
     <head>
-    <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5, minimum-scale=0.5">
-        <link rel="icon" type="image/png" href="/assets/images/icon.png" />
-        <title>{{ page.title }}</title>
-        <link rel="profile" href="http://gmpg.org/xfn/11" />
-        <link rel="stylesheet" href="/assets/css/style.min.css?v={{site.version}}" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
-        <link href='https://fonts.googleapis.com/css?family=PT+Sans|Roboto:700' rel='stylesheet' type='text/css'>
+    <meta charset='utf-8' />
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1.5, minimum-scale=0.5'>
+        <link rel='icon' type='image/png' href='/assets/images/icon.png' />
+        <title>{{page.title}}</title>
+        <link rel='profile' href='http://gmpg.org/xfn/11' />
+        <link rel='stylesheet' type='text/css' href='/assets/css/style.min.css?v={{site.version}}' />
+        <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css' />
+        <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=PT+Sans|Roboto:700' />
+        <meta property='og:locale' content='en_US' />
+        <meta property='og:type' content='website' />
+        <meta property='og:url' content='http://www.chrislewis.com.au/' />
+        <meta property='og:title' content="{{page.title}}" />
+        <meta property='og:description' content='{{page.description}}' />
+        <meta property='og:image' content='{{page.image}}' />
+        <meta property='fb:admins' content='{{site.author.facebook}}' />
     </head>
     <body class="home blog">
         <header id="sidebar">
