Fix font-family and swap to github bundled jekyll.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@ $full_screen: 992px;
 $responsive_start: 750px;
 $mobile_start: 500px;
 $lt_grey: #585858;
-$body_font: "PT Sans", "Helvetica" sans-serif;
-$header_font: "Roboto", "Helvetica" sans-serif;
+$body_font: "PT Sans", "Helvetica", sans-serif;
+$header_font: "Roboto", "Helvetica", sans-serif;
 
 @import "highlight";
 
