Implement 'read more' functionality

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,10 +2,15 @@ $full_screen: 992px;
 $responsive_start: 750px;
 $mobile_start: 500px;
 $lt_grey: #585858;
+$blue: #008AFF;
 $body_font: "PT Sans", "Helvetica", sans-serif;
 $header_font: "Roboto", "Helvetica", sans-serif;
 
 @import "highlight";
+@import "article";
+@import "sidebar";
+@import "header";
+@import "footer";
 
 html {
     font-size: 100%;
@@ -121,131 +126,6 @@ a:link, a:visited, a:hover, a:active {
     text-decoration: none;
 }
 
-/* Articles */
-
-article {
-    h1, h2, h3, h4, h5, h6, p, blockquote {
-        max-width: 600px;
-    }
-    h2 {
-        margin-top: 0px;
-        a.no-link {
-            border: none;
-            font-size: 28px
-        }
-        a.anchor {
-            border-bottom: 0;
-            margin-left: 10px
-        }
-    }
-    a {
-        text-decoration: none;
-        border-bottom: 1px solid #ccc;
-        color: black;
-    }
-    .caption {
-    	font-size: 80% !important;
-    	text-align: center;
-    	font-style: italic;
-    }
-    img, object {
-    	display: block;
-    	margin: 0 auto;
-    	padding: 0;
-    	width: 100%;
-    	max-width: 657px;
-    	float: none;
-    }
-    blockquote {
-        display: inline-block;
-        padding-left: 18px;
-        padding-bottom: 0;
-        font-size: 15px;
-        line-height: 25px;
-        margin-left: 0;
-        margin-top: 0;
-        margin-bottom: 0;
-        border-left: 10px solid #000;
-        code ol {
-            margin-left: 28px;
-        }
-        h1, h2, h3, h4 {
-            margin-top: 15px;
-        }
-        p {
-            padding-right: 0;
-            margin-right: 0;
-            &:first-child {
-                margin-top: 0;
-                padding-top: 0;
-            }
-            &:last-child {
-                margin-bottom: 0;
-                padding-bottom: 0;
-            }
-        }
-    }
-    &.post {
-        display: block;
-        position: relative;
-        padding: 40px;
-        border-top: 1px solid #e2e2e2;
-        min-height: 130px;
-        overflow-x: hidden;
-        @media all and ( max-width: $responsive_start ) {
-            border-top: none;
-        }
-        ul {
-            max-width: auto;
-            min-width: 0;
-            padding-right: 10px;
-        }
-        h2 a {
-            color: #000;
-            text-decoration: none;
-            border-bottom: 1px solid #CCC;
-            font-family: $header_font;
-            font-weight: 700;
-            font-size: 25px;
-            line-height: 28px;
-            -webkit-font-smoothing: antialiased
-        }
-        h2 {
-            font-size: 20px;
-        }
-        h2.entry-title a {
-            border-bottom: none;
-        }
-        ul {
-            list-style-type: disc;
-            max-width: 470px;
-        }
-        ul li, ol li {
-            font-size: 15px;
-            line-height: 25px;
-            margin: 0;
-            color: #4d4d4d;
-            display: list-item;
-            margin-bottom: 5px;
-            margin-top: 5px
-        }
-        ol {
-            max-width: 470px;
-        }
-        blockquote {
-            p {
-                max-width: 500px;
-            }
-            blockquote p {
-                max-width: 400px;
-            }
-            blockquote blockquote p {
-                max-width: 380px;
-            }
-        }
-    }
-}
-
 .menu li{
     line-height: 18px;
     margin-bottom: 12px;
@@ -253,302 +133,6 @@ article {
 
 table{width:auto;display:block}
 td{padding:10px;text-align:left}
-
-section#river {
-	position: relative;
-	margin-left: 26%;
-	border-left: 1px solid #e3e3e3;
-	min-height: 900px;
-	z-index:10;
-	background-color:#fff
-}
-
-/* Header */
-
-header#sidebar {
-	position: fixed;
-	width: 26%;
-    z-index: 1;
-    a.active {
-        color: black !important;
-        border-color: black !important;
-    }
-    h1, h2 {
-        margin:0;
-        font-weight:900;
-        color: #585858;
-        font-family: $header_font;
-        width:75%;
-        a {
-            color: #585858 !important;
-        }
-    }
-    h1 {
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-size: 30px;
-        font-weight: bold;
-        line-height: 30px;
-    }
-    h2 {
-    	margin-top: 10px;
-    	letter-spacing: 1px;
-    	font-size: 13px;
-    	line-height: 16px;
-    	text-transform: uppercase;
-    }
-    h3 {
-    	font-weight: 300;
-    	font-size: 16px;
-    	line-height: 23px;
-    	color: #585c60;
-    	-webkit-font-smoothing: antialiased;
-    	margin: 0;
-    	margin-bottom: 25px;
-    	margin-top: 10px;
-    }
-    figure.logo a {
-        top: 10px;
-        left: 10px;
-        width: 170px;
-        height: 170px;
-    }
-    &.menu_active {
-        @media all and ( max-width: $responsive_start ) {
-            #user_nav {
-                max-height: 50vh;
-                li:hover, li.active {
-                    background-color: rgba(226, 226, 226, 0.93);
-                }
-            }
-            #mobile_menu i {
-                -webkit-transform: rotate( 90deg );
-                -ms-transform: rotate( 90deg );
-                transform: rotate( 90deg );
-            }
-        }
-    }
-    #mobile_menu {
-        display: none;
-        float: right;
-        margin-right: 15px;
-        font-size: 30px;
-        line-height: 30px;
-        top: -2px;
-        position: relative;
-        color: $lt_grey !important;
-        i {
-            -webkit-transition: -webkit-transform 0.1s linear;
-            -ms-transition: -ms-transform 0.1s linear;
-            transition: transform 0.1s linear;
-        }
-        @media all and ( max-width: $responsive_start ) {
-            display: block;
-        }
-    }
-    @media all and ( max-width: $responsive_start ) {
-        display: block;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        z-index: 99;
-        min-height: 0;
-        width: 100%;
-        max-width: 100%;
-        margin: 0;
-        float: none;
-        text-align: center;
-        background-color: rgba( 255, 255, 255, 0.93 );
-        overflow: hidden;
-        border-bottom: 1px solid #e2e2e2;
-        padding-top: 15px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-    	h1, h2, h3 {
-            max-width: 70%;
-            width: auto;
-            margin: 0 auto;
-        }
-        h1 {
-            display: inline-block;
-            float: left;
-            padding-left: 0px;
-            margin-left: 10px;
-            font-size: 25px;
-        }
-    	h2 {
-            margin-top: 2px
-        }
-    	h3 {
-            margin-top: 5px;
-            font-size: 15px;
-            margin-bottom: 15px;
-        }
-    	figure {
-            float: left;
-            padding: 0;
-            &.logo {
-                padding-left: 15px;
-                margin: 0 auto;
-                position: relative;
-                left: auto;
-                right: auto;
-            }
-            img {
-                max-width: 30px;
-                padding-top: 0px;
-            }
-        }
-    }
-    ul#user_nav {
-        position: relative;
-        transition: max-height 0.4s ease-in-out;
-        overflow: hidden;
-        li a, .nav_button {
-            display: inline-block;
-            font-size: 17px;
-            -moz-border-radius: 20px;
-            color: $lt_grey;
-            font-weight: 600;
-            letter-spacing: 1px;
-            margin-bottom: 17px;
-            &:hover {
-                color: #000;
-                border-color: #000;
-            }
-        }
-        li {
-            @media all and ( max-width: $responsive_start ) {
-                display: block;
-                a {
-                    display: block;
-                    border: none;
-                    position: relative;
-                    margin: 0;
-                    padding: 15px;
-                    font-size: 20px;
-                    border-radius: 0px;
-                    margin-left: -10px;
-                    margin-right: -10px;
-                    &, &:hover, &.active {
-                        border-top: 1px solid #e2e2e2 !important;
-                    }
-                }
-                &.active {
-                    border-top: none;
-                }
-            }
-        }
-        @media all and ( max-width: $responsive_start ) {
-            margin-top: 0px;
-            float: right;
-            width: 100%;
-            padding: 0;
-            max-height: 0px;
-            top: 6px;
-        }
-    }
-    #social_icons {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        margin-bottom: 30px;
-        text-align: center;
-        a {
-            font-size: 25px;
-            padding: 5px;
-            width: 30px;
-            text-align: center;
-            color: $lt_grey;
-        }
-        &:hover {
-            color: black;
-            cursor: pointer;
-        }
-        @media all and ( max-width: $responsive_start ) {
-        	position: relative;
-            margin-bottom: 0px;
-            border-top: 1px solid #e2e2e2;
-            border-bottom: 1px solid #e2e2e2;
-            cursor: default;
-            a {
-                padding: 10px;
-            }
-        }
-    }
-    @media all and ( min-width: $full_screen ) {
-        h1, #user_nav {
-            margin-left: 28px;
-        }
-    }
-}
-
-header#begin {
-    padding: 0 0 0 40px;
-}
-
-/* Only top and bottom padding for first header */
-section#river > header:first-child {
-    padding: 40px 0 40px 40px;
-}
-
-header#begin time {
-	display: block;
-	font-family: $body_font;
-	position: relative;
-	text-transform: uppercase;
-	color: #000;
-	font-weight: 700;
-	font-size: 16px;
-	letter-spacing: 1px;
-	line-height: 23px
-}
-
-/* Footer */
-
-nav.pagination {
-	padding: 40px;
-	border-top: 1px solid #e2e2e2;
-	padding-bottom: 60px;
-    span {
-        display: none;
-    }
-    span.next {
-    	display: block;
-    	float: right;
-    }
-    span.prev {
-    	display: block;
-    	float: left;
-    }
-}
-
-section#fin {
-	clear: both;
-	padding-top: 0;
-	margin-bottom: 0;
-    a {
-    	margin-left: 0;
-    	clear: both;
-    	display: inline-block;
-    	margin-top: 20px
-    }
-}
-
-p.legal	{
-	margin-bottom: 0;
-	margin-top: 0;
-	border-top: 1px solid #e2e2e2;
-	margin-left: 0;
-	padding-bottom: 30px;
-	font-weight: 400;
-	padding-left: 20px;
-    a {
-    	font-size: 14px;
-    	color: #ccc;
-    	-webkit-font-smoothing: antialiased;
-    }
-}
 
 /* Logo */
 
@@ -593,68 +177,6 @@ header#sidebar figure.logo a {
 section article.post p, section article.post li {
 	font-size: 17px;
 	line-height:27px
-}
-
-/* Sidebar */
-
-@media all and ( max-width: $responsive_start ) {
-	section#river {
-		margin-left: 0;
-		border-left: none;
-	}
-
-	/* Navigation */
-
-	ul#user_nav {
-		margin: 0;
-		margin-top: 30px
-	}
-	ul#user_nav li {
-		display: inline;
-		margin: 0;
-		margin-right: 0;
-		margin-left: 0
-	}
-	ul#user_nav li.feed { display: none }
-	ul#user_nav li a { margin: 0; margin-bottom: 5px; margin-right: 3px }
-
-	#svbtle_linkback{top:-10px;right:5px;left:auto;position:absolute}
-	#svbtle_linkback span.svbtle{display:none}
-	header#begin{display:none}
-
-
-	/* Article */
-
-    article {
-        h1, h2, h3, h4, h5, h6, p, blockquote, iframe {
-    		max-width: 100%;
-    		padding-right:0
-    	}
-    	&.post {
-    		padding: 60px;
-            @media all and ( max-width: $responsive_start ) {
-                padding: 15px;
-            }
-    	}
-    	hr {
-    		width: 80%;
-    		margin: 0 auto;
-    		margin-top: 35px;
-    		margin-bottom: 30px
-    	}
-    	blockquote {
-            margin-left: 0;
-            max-width: none;
-            min-width: 0;
-            margin-right: 0;
-            padding: 0;
-        }
-    }
-
-	nav.pagination {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
 }
 
 @media all and ( max-width: $responsive_start ) {
