--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,8 @@ $responsive_start: 750px;
 $mobile_start: 500px;
 $lt_grey: #585858;
 $blue: #008AFF;
-$body_font: "PT Sans", "Helvetica", sans-serif;
-$header_font: "Roboto", "Helvetica", sans-serif;
+$body_font: "Helvetica Neue", "Helvetica", sans-serif;
+$header_font: "Helvetica Neue", "Helvetica", sans-serif;
 
 @import "highlight";
 @import "article";
