--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,6 @@ theme:
     <link rel='icon' type='image/png' href='/assets/images/icon.png' />
     <title>{{page.title}}</title>
     <link rel='profile' href='http://gmpg.org/xfn/11' />
-    <link rel='stylesheet' type='text/css' href='/assets/css/style.min.css?v={{site.version}}' />
-    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css' />
     <meta property='og:locale' content='en_US' />
     <meta property='og:type' content='website' />
     <meta property='og:url' content='http://www.chrislewis.com.au/' />
@@ -20,6 +18,9 @@ theme:
     <meta property='og:description' content='{{page.description}}' />
     <meta property='og:image' content='{{page.image}}' />
     <meta property='fb:admins' content='{{site.author.facebook}}' />
+    <style type="text/css">
+      {% include style.min.css %}
+    </style>
   </head>
   <body class="home blog">
     <header id="sidebar">
@@ -27,7 +28,7 @@ theme:
         <a href="/"><img src="/assets/images/developer-koala.jpg" caption="{{site.title}}" /></a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
-      <a href='#' id='mobile_menu'><i class='fa fa-bars'></i></a>
+      <a href='#' id='mobile_menu' onClick='toggle_menu()'><i class='fa fa-bars'></i></a>
       <ul id="user_nav">
         <div class="menu">
           <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}
@@ -43,8 +44,10 @@ theme:
       </ul>
       <div class='clearfix'></div>
     </header>
-    <section id="river" role="main">{{content}}</section>
-    <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
+    <section id="river" role="main" onClick="close_menu()">{{content}}</section>
+    <noscript id="deferred-styles">
+      <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css' />
+    </noscript>
     <script type='text/javascript' src='/assets/js/base.js?v={{site.version}}' async defer></script>
   </body>
 </html>
