Optimise Koala CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,9 @@ theme:
   <body class="home blog">
     <header id="sidebar">
       <figure class="logo medium">
-        <a href="/"><img src="/assets/images/developer-koala.jpg" caption="{{site.title}}" /></a>
+        <a href="/">
+          <img src="/assets/images/developer-koala.jpg" caption="{{site.title}}" />
+        </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
       <a href='#' id='mobile_menu' onClick='toggle_menu()'><i class='fa fa-bars'></i></a>
