--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,7 +141,7 @@ header .logo, header h1, header #user_nav, header #social_icons {
     padding-right: 30px;
 }
 figure.logo img {
-    padding-top: 25px;
+    margin-top: 25px;
     max-width: 200px;
     width: 100%;
 }
