Fix responsive header

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -129,7 +129,7 @@ header#sidebar {
             }
             img {
                 max-width: 30px;
-                padding-top: 0px;
+                margin-top: 0px;
             }
         }
     }
