Fix responsive menu buttton

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ theme:
         </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
-      <a href='#' id='mobile_menu' onClick='toggle_menu()'><i class='fa fa-bars'></i></a>
+      <a href='#' id='mobile_menu' onClick='toggle_menu()'><img src='/assets/images/bars.svg' /></a>
       <ul id="user_nav">
         <div class="menu">
           <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}</ul>
