--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -30,8 +30,7 @@ section#river {
 
 	#svbtle_linkback{top:-10px;right:5px;left:auto;position:absolute}
 	#svbtle_linkback span.svbtle{display:none}
-	header#begin{display:none}
-
+	header.begin{display:none}
 
 	/* Article */
 
