--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,26 +23,29 @@ theme:
   <body class="home blog">
     <header id="sidebar">
       <figure class="logo medium">
-        <a href="/">
-          <img src="/assets/images/developer-koala.jpg" caption="{{site.title}}" />
-        </a>
+      <!--  <a href="/"> -->
+          <picture>
+            <source srcset="/assets/images/developer-koala.webp" type="image/webp">
+            <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
+          </picture>
+    <!--    </a> -->
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
-      <a href='#' id='mobile_menu' onClick='toggle_menu()'><img src='/assets/images/bars.svg' /></a>
+      <a href='#' id='mobile_menu' onClick='toggle_menu()'><img src='/assets/images/bars.svg' alt='open menu' /></a>
       <ul id="user_nav">
-        <div class="menu">
+        <li class="menu">
           <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}</ul>
-        </div>
-        <div id="social_icons">
-          <i><a href="http://www.twitter.com/{{ site.author.twitter }}"><img src='/assets/images/twitter.svg' /></a></i>
-          <i><a href="http://www.github.com/{{ site.author.github }}"><img src='/assets/images/github.svg' /></a></i>
-          <i><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}"><img src='/assets/images/linkedin.svg' /></a></i>
-          <i><a href="/pages/rss.xml"><img src='/assets/images/feed.svg' /></a></i>
-        </div>
+        </li>
+        <li id="social_icons">
+          <i><a href="http://www.twitter.com/{{ site.author.twitter }}"><img src='/assets/images/twitter.svg' alt='twitter' /></a></i>
+          <i><a href="http://www.github.com/{{ site.author.github }}"><img src='/assets/images/github.svg' alt='github' /></a></i>
+          <i><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}"><img src='/assets/images/linkedin.svg' alt='linkedin' /></a></i>
+          <i><a href="/pages/rss.xml"><img src='/assets/images/feed.svg' alt='rss feed' /></a></i>
+        </li>
       </ul>
       <div class='clearfix'></div>
     </header>
-    <section id="river" role="main" onClick="close_menu()">{{content}}</section>
+    <section id="river" role="main" onClick="toggle_menu('')">{{content}}</section>
     <script type='text/javascript'>{% include base.js %}</script>
   </body>
 </html>
