Fix homepage link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@ theme:
   <body class="home blog">
     <header id="sidebar">
       <figure class="logo medium">
-      <!--  <a href="/"> -->
-          <picture>
-            <source srcset="/assets/images/developer-koala.webp" type="image/webp">
-            <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
-          </picture>
-    <!--    </a> -->
+      <a href="/">
+        <picture>
+          <source srcset="/assets/images/developer-koala.webp" type="image/webp">
+          <img src="/assets/images/developer-koala.jpg" alt="developer koala" />
+        </picture>
+      </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
       <a href='#' id='mobile_menu' onClick='toggle_menu()'><img src='/assets/images/bars.svg' alt='open menu' /></a>
