--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,16 +31,16 @@ theme:
       </a>
       </figure>
       <h1><a href="/">{{site.author.name}}</a></h1>
-      <a href='#' id='mobile_menu' onClick='toggle_menu()'><img src='/assets/images/bars.svg' alt='open menu' /></a>
+      <a href='#' id='mobile_menu' onClick='toggle_menu()'>{% include images/bars.svg %}</a>
       <ul id="user_nav">
-        <li class="menu">
+        <li id="menu">
           <ul>{% assign pages_list = site.pages %}{% assign group = 'navigation' %}{% include pages_list %}</ul>
         </li>
         <li id="social_icons">
-          <i><a href="http://www.twitter.com/{{ site.author.twitter }}"><img src='/assets/images/twitter.svg' alt='twitter' /></a></i>
-          <i><a href="http://www.github.com/{{ site.author.github }}"><img src='/assets/images/github.svg' alt='github' /></a></i>
-          <i><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}"><img src='/assets/images/linkedin.svg' alt='linkedin' /></a></i>
-          <i><a href="/pages/rss.xml"><img src='/assets/images/feed.svg' alt='rss feed' /></a></i>
+          <a href="http://www.twitter.com/{{ site.author.twitter }}">{% include images/twitter.svg %}</a>
+          <a href="http://www.github.com/{{ site.author.github }}">{% include images/github.svg %}</a>
+          <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}">{% include images/linkedin.svg %}</a>
+          <a href="/pages/rss.xml">{% include images/feed.svg %}</a>
         </li>
       </ul>
       <div class='clearfix'></div>
